@@ -176,7 +176,12 @@ fi
 arch=arc
 unified_src_abs="$(echo "${PWD}")"/${UNISRC}
 
-version_str="ARCompact Linux uClibc toolchain (built $(date +%Y%m%d))"
+if [ $ISA_CPU = arc700 ]
+then
+    version_str="ARCompact ISA Linux uClibc toolchain ($RELEASE_NAME)"
+else
+    version_str="ARCv2 ISA Linux uClibc toolchain ($RELEASE_NAME)"
+fi
 bugurl_str="http://solvnet.synopsys.com"
 
 
